Bug 1643133 - Pioneer icon is hard to see in dark mode, r=mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D80995

UltraBlame original commit: d0081998c19556cddd29f70bbb78720822d78136

--- a/browser/components/pioneer/content/pioneer.css
+++ b/browser/components/pioneer/content/pioneer.css
@@ -287,3 +287,22 @@ none
 important
 ;
 }
+#
+pioneer
+-
+icon
+{
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
+}
